adjust frontend logic for refreshing the key pair in backend and add global error notifications

--- a/src/app/modules/transaction-overview/transaction-overview.component.scss
+++ b/src/app/modules/transaction-overview/transaction-overview.component.scss
@@ -69,6 +69,12 @@ $border-color: #ddd;
   color: white;
 }
 
+// Info snackbar
+.info-snackbar {
+  background-color: rgb(94, 255, 0);
+  color: white;
+}
+
 // Mat table
 .mat-table-responsive {
   overflow-x: auto;
