--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,26 +1,62 @@
-<mat-toolbar color="primary">
-  <!-- Left side items -->
-  <div class="left-content">
-    <span class="app-title">Penny Guard</span>
-    <ng-container *ngIf="isLoggedIn()">
-      <div class="dropdown">
-        <button mat-button [matMenuTriggerFor]="transactionMenu">Transactions</button>
-        <mat-menu #transactionMenu="matMenu">
-          <button mat-menu-item routerLink="/transaction">Create</button>
-          <button mat-menu-item routerLink="/upload">Upload</button>
-          <button mat-menu-item routerLink="/transaction-overview">Overview</button>
-          <button mat-menu-item routerLink="/transaction-chart">Chart</button>
-        </mat-menu>
-      </div>
-      <button mat-button>Limits</button>
-      <button mat-button>Reminder</button>
-    </ng-container>
-  </div>
-
-  <!-- Right side items -->
-  <div>
-    <ng-container *ngIf="isLoggedIn()">
-      <a (click)="logout()" class="user-greeting">Welcome, <span class="username">{{ getUserName() }}</span></a>
-    </ng-container>
+<!-- app.component.html -->
+<mat-toolbar>
+  <div class="navbar-container">
+    <div class="app-title">PennyGuard</div>
+    <div class="navbar-items" [class.show-menu]="showMenu">
+      <button *ngIf="!isLoggedIn()" mat-button routerLink="/startpage">Главная</button>
+      <button *ngIf="!isLoggedIn()" mat-button routerLink="/login">Войти</button>
+      <ng-container *ngIf="isLoggedIn()">
+        <button mat-button routerLink="/dashboard">Dashboard</button>
+        <div class="dropdown">
+          <button mat-button [matMenuTriggerFor]="transactionMenu">Транзакции</button>
+          <mat-menu #transactionMenu="matMenu">
+            <button mat-menu-item routerLink="/transaction">Создать</button>
+            <button mat-menu-item routerLink="/upload">Загрузить из банка</button>
+            <button mat-menu-item routerLink="/transaction-overview">Транзакции</button>
+            <button mat-menu-item routerLink="/transaction-chart">Анализ</button>      
+          </mat-menu>
+        </div>
+        <button mat-button routerLink="/limit-form">Лимиты</button>
+        <button mat-button>Напоминания</button>
+        <a mat-button (click)="logout()">Выход</a>
+      </ng-container>    
+    </div>
+    <button mat-icon-button class="menu-button" (click)="toggleMenu()">
+      <mat-icon>menu</mat-icon>
+    </button>
   </div>
 </mat-toolbar>
+
+
+<!-- <mat-toolbar color="primary">
+
+  <div class="left-content">
+    <span class="app-title">PennyGuard</span>
+    <ng-container *ngIf="isLoggedIn()">
+      <div class="dropdown">
+        <button mat-button [matMenuTriggerFor]="transactionMenu">Транзакции</button>
+        <mat-menu #transactionMenu="matMenu">
+          <button mat-menu-item routerLink="/transaction">Создать</button>
+          <button mat-menu-item routerLink="/upload">Загрузить из банка</button>
+          <button mat-menu-item routerLink="/transaction-overview">Транзакции</button>
+          <button mat-menu-item routerLink="/transaction-chart">Анализ</button>      
+        </mat-menu>
+      </div>
+      <div class="dropdown">
+        <button mat-button [matMenuTriggerFor]="limitMenu">Лимиты</button>
+        <mat-menu #limitMenu="matMenu">
+          <button mat-menu-item routerLink="/limit-form">Создать</button>
+      </mat-menu>
+      </div>
+      
+      <button mat-button>Напоминания</button>
+    </ng-container>
+  </div>
+  <div>
+    <ng-container *ngIf="isLoggedIn()">
+      <a (click)="logout()" class="user-greeting">
+        <span class="username">{{ getUserName() }}</span>
+      </a>
+    </ng-container>
+  </div>
+</mat-toolbar> -->
