--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,96 +1,154 @@
-/* navbar.component.scss */
+// /* navbar.component.scss */
 
-mat-toolbar {
+// mat-toolbar {
+//   display: flex;
+//   align-items: center;
+//   justify-content: space-between;
+//   font-family: "Lucida Console", monospace;
+//   background: linear-gradient(to right, #2c2c54, #474787); /* Gradient background */
+
+//   .left-content {
+//     display: flex;
+//     align-items: center;
+//   }
+
+//   .app-title {
+//     font-size: 1.5rem;
+//     color: white; /* White text color */
+//     margin-right: 20px; /* Adjust spacing between app title and dropdown */
+//   }
+
+//   .dropdown {
+//     position: relative;
+//   }
+
+//   .dropdown-content {
+//     display: none;
+//     position: absolute;
+//     background-color: rgba(44, 44, 84, 0.8); /* Dark Indigo with transparency */
+//     min-width: 220px;
+//     z-index: 1;
+//     top: calc(100% + 5px);
+//     left: 0;
+//     padding-top: 5px;
+
+//     a {
+//       color: white; /* White text color */
+//       padding: 12px 16px;
+//       text-decoration: none;
+//       display: block;
+//     }
+//   }
+
+//   .dropdown:hover .dropdown-content {
+//     display: block;
+//   }
+// }
+
+// .mat-button {
+//   color: #474787; /* Inherit text color */
+
+//   &:hover {
+//     background-color: #aaabb8; /* Cool Gray */
+//   }
+// }
+
+// .user-greeting {
+//   cursor: pointer;
+//   text-decoration: none;
+//   display: inline-block;
+// }
+
+// .username {
+//   color: white; /* Change the color to white */
+//   font-weight: bold; /* Bold font for the username */
+//   transition: color 0.3s ease-in-out; /* Smooth transition for color change */
+// }
+
+// .user-greeting:hover .username {
+//   color: red; /* Change the color to red when the username is hovered over */
+// }
+
+// .features-button {
+//   color: white; /* White text color */
+//   background-color: transparent; /* Transparent background */
+//   border: none; /* No border */
+//   cursor: pointer; /* Show pointer on hover */
+//   font-family: "Lucida Console", monospace; /* Font family */
+//   font-size: inherit; /* Inherit font size */
+//   padding: 0; /* Remove default padding */
+
+//   &:hover {
+//     background-color: rgba(255, 255, 255, 0.1); /* Hover background color */
+//   }
+// }
+
+// /* Responsive Styles */
+// @media screen and (max-width: 1920px) {
+//   mat-toolbar .dropdown-content {
+//     min-width: 320px; /* Adjust the width for smaller screens */
+//     top: calc(100% + 10px); /* Adjust the top position */
+//   }
+
+//   mat-toolbar .dropdown-content a {
+//     padding: 10px 14px; /* Adjust padding for smaller screens */
+//   }
+// }
+//////////////////////////////////////////////////////////////////////////////////
+/// 
+/// 
+
+
+/* styles.css */
+
+.mat-toolbar{
+  background-color: #E0E3E1;
+}
+.navbar-container {
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  font-family: "Lucida Console", monospace;
-  background: linear-gradient(to right, #2c2c54, #474787); /* Gradient background */
+  align-items: center;
+  width: 100%;
+}
 
-  .left-content {
-    display: flex;
-    align-items: center;
-  }
+.app-title {
+  font-size: 1.5em;
+}
 
-  .app-title {
-    font-size: 1.5rem;
-    color: white; /* White text color */
-    margin-right: 20px; /* Adjust spacing between app title and dropdown */
-  }
+.navbar-items {
+  display: flex;
+  flex-grow: 1;
+  justify-content: flex-end;
+}
 
-  .dropdown {
-    position: relative;
-  }
+.navbar-items button,
+.navbar-items a {
+  margin-left: 10px;
+}
 
-  .dropdown-content {
+.menu-button {
+  display: none;
+}
+
+@media (max-width: 600px) {
+  .navbar-items {
     display: none;
-    position: absolute;
-    background-color: rgba(44, 44, 84, 0.8); /* Dark Indigo with transparency */
-    min-width: 220px;
-    z-index: 1;
-    top: calc(100% + 5px);
-    left: 0;
-    padding-top: 5px;
-
-    a {
-      color: white; /* White text color */
-      padding: 12px 16px;
-      text-decoration: none;
-      display: block;
-    }
   }
 
-  .dropdown:hover .dropdown-content {
+  .navbar-items.show-menu {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 56px; /* Adjust as needed based on your toolbar height */
+    left: 0;
+    right: 0;
+    background-color: rgb(126, 145, 205);
+    border-bottom: 1px solid #ccc;
+    z-index: 1000;
+  }
+
+  .menu-button {
     display: block;
   }
 }
 
-.mat-button {
-  color: #474787; /* Inherit text color */
-
-  &:hover {
-    background-color: #aaabb8; /* Cool Gray */
-  }
-}
-
-.user-greeting {
-  cursor: pointer;
-  text-decoration: none;
-  display: inline-block;
-}
-
-.username {
-  color: white; /* Change the color to white */
-  font-weight: bold; /* Bold font for the username */
-  transition: color 0.3s ease-in-out; /* Smooth transition for color change */
-}
-
-.user-greeting:hover .username {
-  color: red; /* Change the color to red when the username is hovered over */
-}
-
-.features-button {
-  color: white; /* White text color */
-  background-color: transparent; /* Transparent background */
-  border: none; /* No border */
-  cursor: pointer; /* Show pointer on hover */
-  font-family: "Lucida Console", monospace; /* Font family */
-  font-size: inherit; /* Inherit font size */
-  padding: 0; /* Remove default padding */
-
-  &:hover {
-    background-color: rgba(255, 255, 255, 0.1); /* Hover background color */
-  }
-}
-
-/* Responsive Styles */
-@media screen and (max-width: 768px) {
-  mat-toolbar .dropdown-content {
-    min-width: 160px; /* Adjust the width for smaller screens */
-    top: calc(100% + 10px); /* Adjust the top position */
-  }
-
-  mat-toolbar .dropdown-content a {
-    padding: 10px 14px; /* Adjust padding for smaller screens */
-  }
-}
