--- a/src/app/modules/registration/registration/registration.component.html
+++ b/src/app/modules/registration/registration/registration.component.html
@@ -1,85 +1,47 @@
-<div
-  fxLayout="column"
-  fxLayoutAlign="center center"
-  class="registration-container"
->
-  <mat-card>
-    <mat-card-header class="registration-label">Registration</mat-card-header>
-    <mat-card-content>
-      <div class="form-container">
-        <mat-form-field>
-          <mat-label>Enter your first name</mat-label>
-          <input
-            matInput
-            placeholder="John"
-            [formControl]="firstname"
-            required
-          />
-          <mat-error *ngIf="firstname.invalid"
-            >First name is required</mat-error
-          >
-        </mat-form-field>
-        <mat-form-field>
-          <mat-label>Enter your last name</mat-label>
-          <input matInput placeholder="Doe" [formControl]="lastname" required />
-          <mat-error *ngIf="lastname.invalid">Last name is required</mat-error>
-        </mat-form-field>
-        <mat-form-field>
-          <mat-label>Enter your email</mat-label>
-          <input
-            matInput
-            placeholder="john@example.com"
-            [formControl]="email"
-            required
-          />
-          <mat-error *ngIf="email.invalid">Email is required</mat-error>
-          <mat-error *ngIf="email.errors?.['email']"
-            >Invalid email format</mat-error
-          >
-        </mat-form-field>
-        <mat-form-field>
-          <mat-label>Enter your password</mat-label>
-          <input matInput type="password" [formControl]="password" required />
-          <mat-error *ngIf="password.invalid">Password is required</mat-error>
-        </mat-form-field>
-        <mat-form-field>
-          <mat-label>Confirm your password</mat-label>
-          <input
-            matInput
-            type="password"
-            [formControl]="confirmedPassword"
-            required
-          />
-          <mat-error *ngIf="confirmedPassword.invalid"
-            >Confirmation is required</mat-error
-          >
-          <mat-error *ngIf="password.value !== confirmedPassword.value"
-            >Passwords do not match</mat-error
-          >
-        </mat-form-field>
-        <button
-          class="registration-button"
-          mat-raised-button
-          color="primary"
-          (click)="registerUser()"
-        >
-          Register
-        </button>
-        <p class="success-message" *ngIf="successMessage">
-          {{ successMessage }}
-        </p>
-        <p class="error-message" *ngIf="errorMessage">{{ errorMessage }}</p>
-      </div>
-    </mat-card-content>
-    <mat-card-footer class="footer-container">
-      <span>Already have an account?</span>
-      <a
-        (click)="redirectToLogin()"
-        mat-button
-        color="primary"
-        routerLink="/login"
-        >Login</a
-      >
-    </mat-card-footer>
-  </mat-card>
-</div>
+<head>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" />
+</head>
+<body>
+  <div class="wrapper">
+    <div class="content">
+      <h2>Добро пожаловать в Penny Guard</h2>
+      <p>Уже есть аккаунт? 
+        <a (click)="redirectToLogin()" routerLink="/login">Войти</a>
+      </p>
+        <form (ngSubmit)="registerUser()">
+          <label>Имя</label>
+          <input type="text" placeholder="Иван" [formControl]="firstname" required>
+          <label class="error-message" *ngIf="firstname.invalid && firstname.touched ">Введите имя</label>
+
+          <label>Фамилия</label>
+          <input type="text" placeholder="Иванов" [formControl]="lastname" required>
+          <label class="error-message" *ngIf="lastname.invalid && lastname.touched ">Введите фамилию</label>
+
+          <label>Почта</label>
+          <input type="email" placeholder="email@example.com" [formControl]="email" required>
+          <label class="error-message" *ngIf="email.invalid && email.touched">Введите почту</label>
+          <label class="error-message" *ngIf="email.errors?.['email'] && email.touched">Неверный формат почты</label>
+
+          <div class="password-container">
+            <label>Пароль</label>        
+            <a (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+              <mat-icon>{{ hide ? 'visibility_off' : 'visibility' }}</mat-icon>
+            </a> 
+          </div>       
+            <input [type]="hide ? 'password' : 'text'" [formControl]="password" required/>
+            <label class="error-message" *ngIf="password.invalid && password.touched">Введите пароль</label>
+          
+
+          <label>Повторите пароль</label>           
+          <input type="password" [formControl]="confirmedPassword" required>          
+          <label class="error-message" *ngIf="confirmedPassword.invalid && password.touched">Обязательное поле</label>
+          <label class="error-message" *ngIf="password.value !== confirmedPassword.value">Пароли не совпадают</label>
+
+          <button type="submit">Создать аккаунт</button>
+          <label class="success-message" *ngIf="successMessage">{{ successMessage }}</label>
+          <label class="error-message" *ngIf="errorMessage">{{ errorMessage }}</label>
+        </form>
+      </div> 
+  </div>
+</body>
+  
