--- a/src/app/modules/transaction/transaction.component.html
+++ b/src/app/modules/transaction/transaction.component.html
@@ -1,45 +1,29 @@
 <div class="transaction-container">
-  <h2>New transaction</h2>
+  <h2>New Transaction</h2>
   <form (ngSubmit)="createOrUpdate()">
-    <label for="purpose">Enter purpose:</label>
-    <input [(ngModel)]="purpose" type="text" id="purpose" name="purpose" />
+    <label for="purpose">Purpose:</label>
+    <input [(ngModel)]="purpose" type="text" id="purpose" name="purpose" required />
 
-    <label for="amount">Enter amount:</label>
-    <input [(ngModel)]="amount" type="number" id="amount" name="amount" />
+    <label for="amount">Amount:</label>
+    <input [(ngModel)]="amount" type="number" id="amount" name="amount" required />
 
-    <label for="date">Select date:</label>
-    <input [(ngModel)]="date" type="date" id="date" name="date" />
+    <label for="date">Date:</label>
+    <input [(ngModel)]="date" type="date" id="date" name="date" required />
 
-    <label for="regulary">Regular transaction</label>
-    <input
-      [(ngModel)]="regulary"
-      type="checkbox"
-      id="regulary"
-      name="regulary"
-    />
+    <label for="time">Time:</label>
+    <input [(ngModel)]="time" type="time" id="time" name="time" required />
 
-    <label for="category">Select category:</label>
-    <select
-      [(ngModel)]="selectedCategory"
-      name="selectedCategory"
-      (change)="onCategoryChange($event)"
-    >
-      <option *ngFor="let category of categories" [value]="category.id">
-        {{ category.value }}
-      </option>
+    <label for="regular">Regular Transaction:</label>
+    <input [(ngModel)]="regular" type="checkbox" id="regular" name="regular" />
+
+    <label for="selectedCategoryId">Category:</label>
+    <select [(ngModel)]="categoryId" name="selectedCategoryId" (change)="onCategoryChange($event)" required>
+      <option *ngFor="let category of categories" [value]="category.id">{{ category.name }}</option>
     </select>
 
-    <label for="transactionType">Select transaction type:</label>
-    <select
-      [(ngModel)]="selectedType"
-      name="transactionType"
-      (change)="onTransactionTypeChange($event)"
-    >
-      <option
-        *ngFor="let transactionType of transactionTypes"
-        [value]="transactionType.id"
-      >
-        {{ transactionType.type }}
+    <label for="selectedTypeId">Transaction Type:</label>
+    <select [(ngModel)]="typeId" name="selectedTypeId" (change)="onTransactionTypeChange($event)" required>
+      <option *ngFor="let transactionType of transactionTypes" [value]="transactionType.id">{{ transactionType.type }}
       </option>
     </select>
 
