--- a/src/app/modules/last-transactions/last-transactions.component.html
+++ b/src/app/modules/last-transactions/last-transactions.component.html
@@ -2,20 +2,20 @@
     <mat-card>
         <mat-card-content>
             <div *ngIf="transactions.length > 0">
-            <table class="responsive-table">
-                <tbody *ngFor="let transaction of transactions; let i = index">
-                    <tr>
-                        <td rowspan="2">{{ transaction.date | date:'dd.MM.yy' }}</td>
-                        <td>{{ transaction.categoryId || 'N/A' }}</td>
-                        <td rowspan="2" [style.color]="getAmountColorByTransactionType(transaction.transactionTypeId)">
-                            {{ getAmountWithSignAndColor(transaction.amount, transaction.transactionTypeId) || 'N/A' }}
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>{{ transaction.purpose || 'N/A' }}</td>
-                    </tr>
-                </tbody>
-            </table>
+                <table class="responsive-table">
+                    <tbody *ngFor="let transaction of transactions; let i = index">
+                        <tr>
+                            <td rowspan="2">{{ transaction }}</td>
+                            <td>{{ transaction.categoryId || 'N/A' }}</td>
+                            <td rowspan="2" [style.color]="getAmountColorByTransactionType(transaction.typeId)">
+                                {{ getAmountWithSignAndColor(transaction.amount, transaction.typeId) || 'N/A' }}
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>{{ transaction.purpose || 'N/A' }}</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
             <div *ngIf="transactions.length === 0" class="empty-list-message">
                 Нет транзакций.
