--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,3 @@
-<!-- app.component.html -->
 <mat-toolbar>
   <div class="navbar-container">
     <div class="app-title">PennyGuard</div>
@@ -16,7 +15,13 @@
             <button mat-menu-item routerLink="/transaction-chart">Анализ</button>      
           </mat-menu>
         </div>
-        <button mat-button routerLink="/limit-form">Лимиты</button>
+        <div class="dropdown">
+          <button mat-button [matMenuTriggerFor]="limitMenu">Лимиты</button>
+          <mat-menu #limitMenu="matMenu">
+            <button mat-menu-item routerLink="/limit-form">Создать</button>
+            <button mat-menu-item routerLink="/limit-overview">Лимиты</button>     
+          </mat-menu>
+        </div>
         <button mat-button>Напоминания</button>
         <a mat-button (click)="logout()">Выход</a>
       </ng-container>    
@@ -26,37 +31,3 @@
     </button>
   </div>
 </mat-toolbar>
-
-
-<!-- <mat-toolbar color="primary">
-
-  <div class="left-content">
-    <span class="app-title">PennyGuard</span>
-    <ng-container *ngIf="isLoggedIn()">
-      <div class="dropdown">
-        <button mat-button [matMenuTriggerFor]="transactionMenu">Транзакции</button>
-        <mat-menu #transactionMenu="matMenu">
-          <button mat-menu-item routerLink="/transaction">Создать</button>
-          <button mat-menu-item routerLink="/upload">Загрузить из банка</button>
-          <button mat-menu-item routerLink="/transaction-overview">Транзакции</button>
-          <button mat-menu-item routerLink="/transaction-chart">Анализ</button>      
-        </mat-menu>
-      </div>
-      <div class="dropdown">
-        <button mat-button [matMenuTriggerFor]="limitMenu">Лимиты</button>
-        <mat-menu #limitMenu="matMenu">
-          <button mat-menu-item routerLink="/limit-form">Создать</button>
-      </mat-menu>
-      </div>
-      
-      <button mat-button>Напоминания</button>
-    </ng-container>
-  </div>
-  <div>
-    <ng-container *ngIf="isLoggedIn()">
-      <a (click)="logout()" class="user-greeting">
-        <span class="username">{{ getUserName() }}</span>
-      </a>
-    </ng-container>
-  </div>
-</mat-toolbar> -->
