--- a/src/app/modules/transaction-chart/transaction-chart.component.html
+++ b/src/app/modules/transaction-chart/transaction-chart.component.html
@@ -1,20 +1,14 @@
-<div class="chart-container">
-    <canvas id="MyChart">{{ chart }}</canvas>
-  </div>
-  
-  <div class="category-list">
-    <ng-container *ngFor="let category of categoriesData">
-      <ng-container *ngIf="category.totalAmount > 0"> <!-- Проверяем наличие транзакций для категории -->
-        <mat-card>
-          <mat-card-header>
-            <mat-card-title>{{ category.name }}</mat-card-title>
-          </mat-card-header>
-          <mat-card-content>
-            <p>Процент от всей суммы: {{ category.percent | number:'1.0-0' }}%</p>
-            <p>Общая сумма: {{ category.totalAmount | currency:'RUB ':'symbol':'1.0-0' }}</p>
-          </mat-card-content>
-        </mat-card>
-      </ng-container>
-    </ng-container>
-  </div>
-  
+<body>
+  <mat-grid-list [cols]="gridColumns" rowHeight="155px">
+    <mat-grid-tile *ngFor="let card of cards" [colspan]="card.cols" [rowspan]="card.rows">
+      <mat-card class="dashboard-card">
+        <mat-card-content class="dashboard-card-content">
+          <div>
+            <app-chart *ngIf="card.id === 'doughnut'"></app-chart>
+          </div>
+        </mat-card-content>
+      </mat-card>
+    </mat-grid-tile>
+  </mat-grid-list>
+</body>
+    
