--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -18,6 +18,7 @@
         </div>
         <button mat-button routerLink="/limit-form">Лимиты</button>
         <button mat-button routerLink="/notifications-overview">Напоминания</button>
+        <button mat-button routerLink="/financial-goal-form">Цели</button>
         <a mat-button (click)="logout()">Выход</a>
       </ng-container>
     </div>
@@ -39,7 +40,7 @@
           <button mat-menu-item routerLink="/transaction">Создать</button>
           <button mat-menu-item routerLink="/upload">Загрузить из банка</button>
           <button mat-menu-item routerLink="/transaction-overview">Транзакции</button>
-          <button mat-menu-item routerLink="/transaction-chart">Анализ</button>      
+          <button mat-menu-item routerLink="/transaction-chart">Анализ</button>
         </mat-menu>
       </div>
       <div class="dropdown">
@@ -48,7 +49,7 @@
           <button mat-menu-item routerLink="/limit-form">Создать</button>
       </mat-menu>
       </div>
-      
+
       <button mat-button>Напоминания</button>
     </ng-container>
   </div>
