--- a/src/app/modules/savings-progress/savings-progress.component.html
+++ b/src/app/modules/savings-progress/savings-progress.component.html
@@ -1,9 +1,8 @@
 <div *ngFor="let goal of financialGoals">
     <h3>{{ goal.name }}</h3>
     <div class="progress">
-        <div class="progress-bar" role="progressbar"
-            [style.width.%]="getPercentage(getCurrentAmount(goal.id), getTotalGoal(goal.id))">
-            {{ getPercentage(getCurrentAmount(goal.id), getTotalGoal(goal.id)) }}%
+        <div class="progress-bar" role="progressbar" [style.width.%]="getPercentage(balance, getTotalGoal(goal.id))">
+            {{ getPercentage(balance, getTotalGoal(goal.id)) }}%
         </div>
     </div>
 </div>
